--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,12 @@ python = ">=3.11,<3.12"
 kaleido = "0.2.1"
 pycaret = ">=3.2.0"
 
+[tool.poetry.group.dev.dependencies]
+bandit = "^1.7.5"
+black = "^23.11.0"
+flake8 = "^6.1.0"
+isort = "^5.12.0"
+pydocstyle = "^6.3.0"
 
 [build-system]
 requires = ["poetry-core"]
