--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ black = "^23.11.0"
 flake8 = "^6.1.0"
 isort = "^5.12.0"
 pydocstyle = "^6.3.0"
+pytest = "^7.4.3"
 
 [build-system]
 requires = ["poetry-core"]
