--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,10 +1,4 @@
-# This workflow will upload a Python Package using Twine when a release is created
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python#publishing-to-package-registries
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
+# This workflow will upload a Python Package using Pycaret when a release is created
 
 name: Upload Python Package
 
@@ -17,6 +11,9 @@ permissions:
   contents: read
 
 jobs:
+  call-test-workflow:
+    uses: ./.github/workflows/pytest.yml
+
   test-deploy:
     runs-on: ubuntu-latest
 
