--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -7,29 +7,21 @@ on:
     branches: [main]
 
 jobs:
-  test-reusable:
+  Tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up Python
-        id: setup_python
-        uses: actions/setup-python@v3
+      - name: Install poetry
+        run: pipx install poetry
+
+      - uses: actions/setup-python@v4
         with:
           python-version: "3.11"
+          cache: "poetry"
 
-      - name: Cache Poetry environment
-        uses: actions/cache@v3
-        with:
-          key: venv-${{ runner.os }}-${{ steps.setup_python.outputs.python-version}}-${{ hashFiles('poetry.lock') }}
-          path: .venv
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install poetry
-          poetry config virtualenvs.in-project true
-          poetry install
+      - name: Install Dependencies
+        run: poetry install
 
       - name: Run Tests
-        run: poetry run pytest fhdw/tests/
+        run: poetry run pytest
