--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -5,7 +5,7 @@ on:
   workflow_call:
     inputs:
       python-version:
-        required: false
+        required: true
         type: string
         default: "3.11"
   push:
