--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,6 +16,8 @@
 # TODO: add predefined workflow to streamline procedure
 # https://github.com/marketplace/actions/github-release-from-tag
 
+name: Publish Package to PyPI
+
 on:
   workflow_dispatch:
     inputs:
@@ -33,6 +35,8 @@ permissions:
 jobs:
   call-test-workflow:
     uses: ./.github/workflows/pytest.yml
+    with:
+      python-version: ${{ vars.PYTHON_VERSION }}
 
   test-deploy:
     runs-on: ubuntu-latest
@@ -41,9 +45,9 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v4
         with:
-          python-version: "3.11"
+          python-version: ${{ vars.PYTHON_VERSION }}
 
       - name: Install dependencies
         run: |
@@ -71,9 +75,10 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v4
         with:
-          python-version: "3.11"
+          python-version: ${{ vars.PYTHON_VERSION }}
+          cache: "poetry"
 
       - name: Install dependencies
         run: |
