--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,6 +36,8 @@ jobs:
   test-deploy:
     runs-on: ubuntu-latest
 
+    needs: call-test-workflow
+
     steps:
       - uses: actions/checkout@v3
 
