--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,11 @@
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
+
+[project.urls]
+"Homepage" = "https://github.com/fhdw-forschung/modelling-tools"
+"Bug Tracker" = "https://github.com/fhdw-forschung/modelling-tools/issues"
+
 [tool.poetry]
 name = "fhdw-modelling"
 version = "0.3.2"
@@ -9,10 +17,8 @@ packages = [{include = "fhdw"}]
 
 [tool.poetry.dependencies]
 python = ">=3.11,<3.12"
-
 kaleido = "0.2.1"
 pycaret = ">=3.2.0"
-
 
 [tool.poetry.group.dev.dependencies]
 bandit = "^1.7.5"
@@ -22,6 +28,12 @@ isort = "^5.12.0"
 pydocstyle = "^6.3.0"
 pytest = "^7.4.3"
 
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+[tool.bandit.assert_used]
+skips = ['*/test_*.py']
+
+[tool.isort]
+profile = "black"
+force_single_line = true
+
+[tool.pydocstyle]
+convention = "google"
