--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ flake8 = "^6.1.0"
 isort = "^5.12.0"
 pydocstyle = "^6.3.0"
 pytest = "^7.4.3"
+ipykernel = "^6.26.0"
 
 [tool.bandit.assert_used]
 skips = ['*/test_*.py']
