--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "fhdw-modelling"
-version = "1.0.1"
+version = "1.1.0"
 description = "A collection of modelling tools. Intended for generic usage in FHDW projects."
 authors = ["Pascal Niggemeier <pascal.niggemeier@fhdw.de>"]
 license = "MPL-2.0"
@@ -19,6 +19,7 @@ packages = [{include = "fhdw"}]
 python = ">=3.11,<3.12"
 kaleido = "0.2.1"
 pycaret = ">=3.2.0"
+pyarrow = "^14.0.1"
 
 [tool.poetry.group.dev.dependencies]
 bandit = "^1.7.5"
