--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,6 @@
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
-
-[project.urls]
-"Homepage" = "https://github.com/fhdw-forschung/modelling-tools"
-"Bug Tracker" = "https://github.com/fhdw-forschung/modelling-tools/issues"
 
 [tool.poetry]
 name = "fhdw-modelling"
@@ -13,12 +9,16 @@ description = "A collection of modelling tools. Intended for generic usage in FH
 authors = ["Pascal Niggemeier <pascal.niggemeier@fhdw.de>"]
 license = "MPL-2.0"
 readme = "README.md"
-packages = [{include = "fhdw"}]
+repository = "https://github.com/fhdw-forschung/modelling-tools"
+packages = [{ include = "fhdw" }]
+
+[tool.poetry.urls]
+"Bug Tracker" = "https://github.com/fhdw-forschung/modelling-tools/issues"
 
 [tool.poetry.dependencies]
 python = ">=3.11,<3.12"
 kaleido = "0.2.1"
-pycaret = ">=3.2.0"
+pycaret = { version = "^3.2.0", extras = ["mlops"] }
 pyarrow = "^14.0.1"
 
 [tool.poetry.group.dev.dependencies]
