dev: update devcontainer config

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -78,6 +78,7 @@
         "ms-toolsai.jupyter",
         "ms-vscode.live-server",
         "tamasfe.even-better-toml",
+        "visualstudioexptteam.intellicode-api-usage-examples",
         "visualstudioexptteam.vscodeintellicode",
         "yzhang.markdown-all-in-one"
       ]
