--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ kaleido = "0.2.1"
 pycaret = { version = "^3.2.0", extras = ["mlops"] }
 pyarrow = "^14.0.1"
 fastapi = "^0.104.1"
+pyyaml = "^6.0.1"
 
 [tool.poetry.group.dev.dependencies]
 bandit = "^1.7.5"
