(#74) ensembes no longer return best models

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -79,6 +79,7 @@
         "ms-python.vscode-pylance",
         "ms-toolsai.jupyter",
         "ms-vscode.live-server",
+        "RobbOwen.synthwave-vscode",
         "tamasfe.even-better-toml",
         "visualstudioexptteam.intellicode-api-usage-examples",
         "visualstudioexptteam.vscodeintellicode",
