(#100) example for reading data from parent-run

--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -11,6 +11,7 @@ parts:
   - caption: Examples
     chapters:
       - file: test-functions
+      - file: mlflow-pycaret-management
   - caption: Documentation
     chapters:
       - file: api
