--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "fhdw-modelling"
-version = "6.1.1"
+version = "7.0.0"
 description = "A collection of modelling tools. Intended for generic usage in FHDW projects."
 authors = ["Pascal Niggemeier <pascal.niggemeier@fhdw.de>"]
 license = "MPL-2.0"
@@ -18,21 +18,22 @@ documentation = "https://fhdw-forschung.github.io/modelling-tools/"
 
 [tool.poetry.dependencies]
 python = ">=3.11,<3.12"
-kaleido = "0.2.1"
-pycaret = { version = "^3.2.0", extras = ["mlops"] }
-pyarrow = "^14.0.1"
+
 fastapi = "^0.104.1"
+kaleido = "0.2.1"
+pyarrow = "^14.0.1"
+pycaret = { version = "^3.2.0", extras = ["mlops", "models"] }
 pyyaml = "^6.0.1"
 
 [tool.poetry.group.dev.dependencies]
 bandit = "^1.7.5"
 black = "^23.11.0"
 flake8 = "^6.1.0"
+ipykernel = "^6.26.0"
 isort = "^5.12.0"
+jupyter-book = "^0.15.1"
 pydocstyle = "^6.3.0"
 pytest = "^7.4.3"
-ipykernel = "^6.26.0"
-jupyter-book = "^0.15.1"
 sphinx-autobuild = "^2021.3.14"
 
 [tool.bandit.assert_used]
