--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -46,7 +46,7 @@
         },
         "[python]": {
           "editor.codeActionsOnSave": {
-            "source.organizeImports": true
+            "source.organizeImports": "explicit"
           },
           "editor.defaultFormatter": "ms-python.black-formatter",
           "editor.formatOnSave": true,
