--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,8 +21,9 @@ python = ">=3.11,<3.12"
 
 fastapi = "^0.104.1"
 kaleido = "0.2.1"
+mlflow = "^2.10.2"
 pyarrow = "^14.0.1"
-pycaret = { version = "^3.2.0", extras = ["mlops", "models"] }
+pycaret = { version = "^3.3.0", extras = ["mlops", "models"] }
 pyyaml = "^6.0.1"
 
 [tool.poetry.group.dev.dependencies]
