--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -60,7 +60,9 @@
         "notebook.diff.ignoreOutputs": true,
         "notebook.formatOnSave.enabled": true,
         "python.testing.pytestEnabled": true,
-        "python.testing.unittestEnabled": false
+        "python.testing.unittestEnabled": false,
+
+        "extensions.verifySignature": false
       },
       "extensions": [
         "bierner.markdown-mermaid",
